# addnn

./: Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml
cpp/torchscript-atomize/: CMakeLists.txt  main.cpp
src/addnn/: cli.py  dataset.py  grpc.py  infer.py  inspect.py  logging.py  main.py  model.py  thresholds.py  torchhub.py  train.py  validate.py
src/addnn/benchmark/: cli.py
src/addnn/benchmark/end_to_end/: cli.py  config.py  dynamic.py  request_generator.py  static.py
src/addnn/benchmark/strategies/: cli.py  executor.py  memory_monitor.py  scenarios.py
src/addnn/controller/: controller.py  controller_servicer.py  node_state_monitor.py
src/addnn/controller/proto/: controller.proto  controller_pb2.py  controller_pb2.pyi  controller_pb2_grpc.py  controller_pb2_grpc.pyi
src/addnn/example/: cli.py
src/addnn/example/models/: googlenet.py  inception_v3.py  mobilenetv3.py  model_factory.py  resnet.py  vgg.py
src/addnn/node/: cli.py  neural_network.py  neural_network_servicer.py  node_servicer.py  node_state_monitor.py
src/addnn/node/proto/: neural_network.proto  neural_network_pb2.py  neural_network_pb2.pyi  neural_network_pb2_grpc.py  neural_network_pb2_grpc.pyi  node.proto  node_pb2.py  node_pb2.pyi  node_pb2_grpc.py  node_pb2_grpc.pyi  node_state.proto  node_state_pb2.py  node_state_pb2.pyi
src/addnn/profile/: cli.py  layer_profile.py
src/addnn/serve/: cli.py  scheduler.py
src/addnn/util/: controller.py  entropy.py  serialization.py  torchscript.py
tests/node/: test_neural_network.py
tests/placement/: test_genetic.py  test_optimal.py
(+16 files in other folders)
