[tool.poetry]
name = "addnn"
version = "0.1.0"
description = ""
authors = ["Matthias Reisinger <root@mreisinger.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
torch = "^1.8"
torchvision = "^0.9"
tqdm = "^4.55"
grpcio = "^1.40"
click = "^7.1"
grpcio-status = "^1.34"
PuLP = "^2.4"
GPUtil = "^1.4"
ptflops = "^0.6"
psutil = "^5.8"
requests = "^2.25.1"
icmplib = "^3.0.2"
numpy = "1.21.0"
deap = "^1.3.1"
fvcore = "^0.1.3"
python_papi = "^5.5.1"
matplotlib = "^3.4.2"
scipy = "^1.6.3"
PyYAML = "^5.4.1"
types-PyYAML = "^5.4.10"
ipaddress = "^1.0.23"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.910"
grpcio-tools = "^1.34"
mypy-protobuf = "^2.10"
grpc-stubs = "^1.24.7"
types-protobuf = "^3.17.4"

[tool.poetry.scripts]
addnn = "addnn.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
